--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
             <div class="col-lg-4 h1 cen">
                 <a href="https://github.com/ATR-OC"><i class="fab fa-github"></i></a>
             </div>
-            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                
+            </div>
             <div class="col-lg-4 h1 cen">
                 <a href="https://twitter.com/ATR_OC"><i class="fab fa-twitter"></i></a>                
             </div>              
         </div>
     </div>
-    <div class="parallax"></div>    
+    <div class="parallax2"></div>    
     <script type="text/javascript" src="script.js"></script> 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
