Unoptimized but working

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>ATR_OC</title>
+    <link rel="icon" href="Title.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 <body>
-    <div class="parallax"></div>
-    <div id="gradient" style="height:100%;font-size:36px">
-        <div class="row container content">
-            <div class="col-lg-4 h1 cen">
-                <a href="https://github.com/ATR-OC"><i class="fab fa-github"></i></a>
-            </div>
-            <div class="col-lg-4">
-                
-            </div>
-            <div class="col-lg-4 h1 cen">
-                <a href="https://twitter.com/ATR_OC"><i class="fab fa-twitter"></i></a>                
-            </div>              
+    <div class="parallax">ATR_OC</div>
+    <div id="gradient" class="row" style="height:100%; font-size: 10rem; ">
+        <div class="col-lg-4 cen" style="">
+            <a href="https://github.com/ATR-OC"><i class="fab fa-github"></i></a>
         </div>
+        <div class="col-lg-4">
+                
+        </div>
+        <div class="col-lg-4 cen">
+            <a href="https://twitter.com/ATR_OC"><i class="fab fa-twitter"></i></a>                
+        </div>              
+
     </div>
     <div class="parallax2"></div>    
     <script type="text/javascript" src="script.js"></script> 
